--- a/bibliography.bib
+++ b/bibliography.bib
@@ -255,7 +255,7 @@
 
 @inproceedings{doumoulakis2017,
     author = {Doumoulakis, Anastasios and Keryell, Ronan and O'Brien, Kenneth},
-    title = {SYCL C++ and \mbox{OpenCL} interoperability experimentation with triSYCL},
+    title = {SYCL C++ and OpenCL interoperability experimentation with triSYCL},
     year = 2017,
     month = may,
     booktitle = {Proceedings of the \nth{5} International Workshop on OpenCL},
@@ -276,7 +276,7 @@
 @inproceedings{ditucci2017,
     author = {Di Tucci, Lorenzo and Rabozzi, Marco and Stornaiuolo, Luca and
               Santambrogio, Marco Domenico},
-    title = {The Role of CAD Frameworks in Heterogeneous FPGA"=Based Cloud
+    title = {The Role of CAD Frameworks in Heterogeneous FPGA-Based Cloud
              Systems},
     year = 2017,
     month = nov,
