--- a/ergebnisse.tex
+++ b/ergebnisse.tex
@@ -566,8 +566,8 @@ stehenden \textit{Block RAM}.
     \end{minipage}
     \pdfimageresolution=72
     \caption[Netzliste des synthetisierten Box-Filter-\textit{Kernels} mit
-             verschiedenen Datentypen]{Netzliste des Box-Filter-Kernels mit
-             verschiedenen Datentypen. Die unterschiedliche Auslastung der
+             verschiedenen Datentypen]{Netzliste des Box-Filter-\textit{Kernels}
+             mit verschiedenen Datentypen. Die unterschiedliche Auslastung der
              Hardware"=Ressourcen ist in dieser Ansicht deutlich sichtbar. Blaue
              Bereiche werden für die Schaltung verwendet, dunkelgraue sind nicht
              in Gebrauch. Der orange Bereich ist für die Laufzeitumgebung
